# filr

./: .gitignore  CMakeLists.txt  Makefile  cstr.c  cstr.h  filr.c  filr.h  hash_map.h  inputs.h  main.c  result.h  view.c  view.h
config/: inputs.h  theme_blue.h  theme_pink.h
resources/: theme_blue.h
src/: cstr.c  cstr.h  filr.c  filr.h  filr_impl_linux.c  filr_impl_windows.c  hash_map.c  hash_map.h  inputs.c  inputs.h  linked_list.c  linked_list.h  main.c  theme_constants.c  view.c  view.h
test/: Makefile  check_linked_list  check_linked_list.c
